fix(SubscriptionList): truncat

--- a/src/component/container/App/Subscription/SubscriptionList/SubscriptionListContainer.css
+++ b/src/component/container/App/Subscription/SubscriptionList/SubscriptionListContainer.css
@@ -46,8 +46,4 @@
 .SubscriptionListContainer-itemLink {
     padding: 0 4px;
     width: 100%;
-    /* ellipsis long text */
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
 }
